--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -22,6 +22,7 @@ html, body {
 body {
 	font-size: 100%;
 	font-family: 'RobotoSlab-Regular';
+	word-wrap: break-word;
 }
 
 body a {
@@ -344,10 +345,6 @@ ul.navig li a.active {
 	color: #190608;
 }
 
-.banner-btn {
-	margin-top: 8%;
-}
-
 .banner-btn a {
 	color: #190608;
 	padding: 5px 13px;
@@ -371,6 +368,59 @@ ul.navig li a.active {
 	-ms-transition: 0.5s all ease;
 }
 
+button.btn-right {
+	color: #ffffff;
+	padding: 5px 13px;
+	border: 1px solid #190608;
+	font-size: 13px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-o-border-radius: 5px;
+	-ms-border-radius: 5px;
+	font-family: 'Raleway-Regular';
+	float: right;
+	margin-right: 3%;
+	background: #190608;
+}
+
+button.btn-right:hover {
+	background: #ffffff;
+	color: #190608;
+	transition: 0.5s all ease;
+	-webkit-transition: 0.5s all ease;
+	-moz-transition: 0.5s all ease;
+	-o-transition: 0.5s all ease;
+	-ms-transition: 0.5s all ease;
+}
+
+button.btn-left {
+	color: #ffffff;
+	padding: 5px 13px;
+	border: 1px solid #190608;
+	font-size: 13px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	-o-border-radius: 5px;
+	-ms-border-radius: 5px;
+	font-family: 'Raleway-Regular';
+	float: left;
+	margin-right: 3%;
+	margin-bottom: auto;
+	background: #190608;
+}
+
+button.btn-left:hover {
+	background: #ffffff;
+	color: #190608;
+	transition: 0.5s all ease;
+	-webkit-transition: 0.5s all ease;
+	-moz-transition: 0.5s all ease;
+	-o-transition: 0.5s all ease;
+	-ms-transition: 0.5s all ease;
+}
+
 /*--banner-end--*/
 /*--about-start--*/
 .about {
@@ -380,6 +430,7 @@ ul.navig li a.active {
 .about-one {
 	text-align: center;
 }
+
 
 .about-one p {
 	color: #999;
@@ -394,6 +445,17 @@ ul.navig li a.active {
 	font-size: 24px;
 	margin: 10px 0 0 0;
 	color: #3d1a1b;
+}
+
+.about-one h4.comment-header {
+	font-size: 18px;
+	margin: 10px 0 0 10px;
+	color: #3d1a1b;
+	text-align: left;
+}
+
+.about-one h3 i {
+	padding-right: 10px;
 }
 
 .about-two {
@@ -539,7 +601,7 @@ ul.navig li a.active {
 }
 
 .abt-2 {
-	margin-top: 12%;
+	/*margin-top: 12%;*/
 }
 
 .might-grid {
@@ -556,7 +618,7 @@ ul.navig li a.active {
 
 .abt-2 ul {
 	padding: 0;
-	margin-top: 8%;
+	margin-top: 3%;
 	margin-left: 10%;
 }
 
@@ -2680,7 +2742,7 @@ input.form-control {
 }
 
 input.zip-input{
-	margin: 20px auto 5px auto;
+	margin: 20px auto 20px auto;
 	width: 50%;
 	text-align: center;
 }
@@ -2713,18 +2775,27 @@ p.navbar-text.pull-left {
 
 .commentDiv {
 	margin-top: 25px;
+	text-align: left;
+	font-size: 15px;
+}
+
+.commentText {
+	padding: 5px 0 0 15px;
+	text-align: left;
 }
 
 .replyDiv1 {
 	color: #efefef;
-	font-size: 20px;
+	font-size: 16px;
 	padding-left: 20px;
-	margin-bottom: -12px;
+	margin-bottom: -10px;
 }
 .replyDiv2 {
 	background-color: #efefef;
-	padding: 10px 0 10px 20px;
+	padding: 10px 20px 10px 20px;
+	text-align: left;
 }
+
 .replyBtn {
 	background-color: transparent;
 	border: none;
@@ -2771,3 +2842,11 @@ p.navbar-text.pull-left {
 	color: white;
 	background-color: #c03939;
 }
+
+iframe.g-map {
+	width: 80%;
+	height: 200px;
+	border: 0;
+	margin-bottom: 3%;
+}
+
